--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "poc",
+  "name": "poetic-maps-frontend-poc",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "18.4.0",
+    "yarn": "1.22.19"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.tsx src",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    ".{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
-    "husky": "^8.0.2",
-    "prettier-eslint": "^15.0.1",
+    "@tanstack/react-query": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.4.5",
-    "yarn": "^1.22.19"
+    "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
