fix missing wildcard in lint-staged command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    ".{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
