--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
-    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-query": "^4.22.4",
+    "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
