--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.23.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
