set lint-staged to format, lint, and readd modified files to staged on commit

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
